--- a/src/Styles/sidebar.scss
+++ b/src/Styles/sidebar.scss
@@ -1,4 +1,7 @@
-
+@font-face {
+  font-family: 'Work Sans';
+  src: url('../Font/WorkSans.ttf') format('truetype');
+}
 
 #wrapper {
    padding-left: 0;
@@ -67,7 +70,7 @@
 }
 
 .sidebar-nav label {
-   // font-family: 'Work Sans';
+   font-family: 'Work Sans';
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
@@ -90,7 +93,7 @@
    text-transform: capitalize;
    padding: 10px 0;
 
-   // font-family: 'Work Sans';
+   font-family: 'Work Sans';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
@@ -108,6 +111,18 @@
    color: #000;
    background: #f3fcfc;
    border-left: #39CDCC 4px solid;
+}
+
+.sidebar-nav .switch {
+   font-family: 'Work Sans';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 19px;
+   /* identical to box height */
+
+
+   color: #213F7D;
 }
 
 .sidebar-nav .active {
