--- a/src/Styles/login.scss
+++ b/src/Styles/login.scss
@@ -2,102 +2,565 @@
   font-family: 'Work Sans';
   src: url('../Font/WorkSans.ttf') format('truetype');
 }
+@font-face {
+  font-family: 'Avenir Next';
+  src: url('../Font/AvenirNext.otf') format('opentype');
+}
 $color_1: #213F7D;
 $color_2: #545F7D;
 $color_3: #39CDCC;
 $color_4: #fff;
 
-.logo-top {
-	margin: 0 0 15% 0;
-}
-.login-section {
-	padding: 100px;
-}
-.container {
-	max-width: 100% !important;
-	margin: 0 !important;
-}
+
 .first-section {
-	background: #fdfdfd;
-	padding: 70px 70px 180px 70px;
+	img {
+		max-width: 100%;
+		height: auto;
+	}
 }
-.second-section {
-	background: #fff;
-	padding: 160px 70px 70px 70px;
-	.welcome-text {
-		width: 183px;
-		height: 55px;
+
+
+
+@media (min-width: 1470px) {
+	.logo-top {
+		margin: 0 0 15% 0;
+	}
+	.container {
+		max-width: 100% !important;
+		margin: 0 !important;
+	}
+	.first-section {
+		background: #fdfdfd;
+		padding: 70px 70px 180px 70px;
+		height: auto;
+		.login-image {
+			width: 900px;
+			height: auto;
+		}
+	}
+	.second-section {
+		background: #fff;
+		padding: 190px 70px 70px 70px;
+		.welcome-text {
+			width: 183px;
+			height: 55px;
+			left: 836px;
+			top: 215px;
+			font-family: 'Avenir Next';
+			font-style: normal;
+			font-weight: 700;
+			font-size: 40px;
+			line-height: 55px;
+			letter-spacing: -0.04em;
+			color: $color_1;
+			text-transform: capitalize;
+		}
+		.sub-text {
+			width: 194px;
+			height: 28px;
+			left: 836px;
+			top: 280px;
+			font-family: 'Avenir Next';
+			font-style: normal;
+			font-weight: 400;
+			font-size: 20px;
+			line-height: 27px;
+			color: $color_2;
+			margin-bottom: 10%;
+			&:first-letter {
+				text-transform: capitalize;
+			}
+		}
+	}
+	.forgot-text {
+		width: 147px;
+		height: 17px;
 		left: 836px;
-		top: 215px;
+		top: 516px;
 		font-family: 'Avenir Next';
 		font-style: normal;
-		font-weight: 700;
-		font-size: 40px;
-		line-height: 55px;
-		letter-spacing: -0.04em;
-		color: $color_1;
-		text-transform: capitalize;
+		font-weight: 600;
+		font-size: 12px;
+		line-height: 16px;
+		text-align: right;
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
+		color: $color_3;
 	}
-	.sub-text {
-		width: 194px;
-		height: 28px;
-		left: 836px;
-		top: 280px;
-		// font-family: 'Avenir Next';
-		font-style: normal;
-		font-weight: 400;
-		font-size: 20px;
-		line-height: 27px;
-		color: $color_2;
-		&:first-letter {
-			text-transform: capitalize;
+	.login-form {
+		button {
+			left: 58.06%;
+			right: 10.9%;
+			background: #39cdcc;
+			border-radius: 8px;
+			width: 557px;
+			height: 50px;
+			margin: 0 auto;
+			border: 1px solid #39cdcc;
+			color: $color_4;
+			text-transform: uppercase;
+			&:hover {
+				background: #30b3b2;
+				border: 1px solid #30b3b2;
+				transition: 0.3s;
+			}
+		}
+		input {
+			box-sizing: border-box;
+			margin-bottom: 5%;
+			padding: 0 0 0 20px;
+			width: 557px;
+			height: 50px;
+			background: #FFFFFF;
+			border: 2px solid rgba(84, 95, 125, 0.15);
+			border-radius: 5px;
+			&:focus {
+				border: 1px solid #39cdcc !important;
+			}
 		}
 	}
 }
-.forgot-text {
-	width: 147px;
-	height: 17px;
-	left: 836px;
-	top: 516px;
-	// font-family: 'Avenir Next';
+
+
+
+
+@media (min-width: 992px) and (max-width: 1469px) {
+	.logo-top {
+		margin: 0 0 30% 0;
+	}
+	.container {
+		max-width: 100% !important;
+		margin: 0 !important;
+	}
+	.first-section {
+		background: #fdfdfd;
+		padding: 70px 70px 180px 70px;
+		.login-image {
+			width: 100%;
+		}
+	}
+	.second-section {
+		background: #fff;
+		padding: 18% 70px 70px 70px;
+		.welcome-text {
+			width: 183px;
+			height: 55px;
+			left: 836px;
+			top: 215px;
+			font-family: 'Avenir Next';
+			font-style: normal;
+			font-weight: 700;
+			font-size: 40px;
+			line-height: 55px;
+			letter-spacing: -0.04em;
+			color: $color_1;
+			text-transform: capitalize;
+		}
+		.sub-text {
+			width: 194px;
+			height: 28px;
+			left: 836px;
+			top: 280px;
+			font-family: 'Avenir Next';
+			font-style: normal;
+			font-weight: 400;
+			font-size: 20px;
+			line-height: 27px;
+			color: $color_2;
+			&:first-letter {
+				text-transform: capitalize;
+			}
+		}
+	}
+	.forgot-text {
+		width: 147px;
+		height: 17px;
+		left: 836px;
+		top: 516px;
+		font-family: 'Avenir Next';
+		font-style: normal;
+		font-weight: 600;
+		font-size: 12px;
+		line-height: 16px;
+		text-align: right;
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
+		color: $color_3;
+	}
+	.login-form {
+		button {
+			left: 58.06%;
+			right: 10.9%;
+			background: #39cdcc;
+			border-radius: 8px;
+			width: 80%;
+			height: 40px;
+			margin: 0 auto;
+			border: 1px solid #39cdcc;
+			color: $color_4;
+			text-transform: uppercase;
+			&:hover {
+				background: #30b3b2;
+				border: 1px solid #30b3b2;
+				transition: 0.3s;
+			}
+		}
+		input {
+			box-sizing: border-box;
+			margin-bottom: 5%;
+			padding: 0 0 0 20px;
+			width: 80%;
+			height: 40px;
+			background: #FFFFFF;
+			border: 2px solid rgba(84, 95, 125, 0.15);
+			border-radius: 5px;
+			&:focus {
+				border: 1px solid #39cdcc !important;
+			}
+		}
+	}
+}
+
+
+
+@media (min-width: 768px) and (max-width: 991px) {
+	.logo-top {
+		margin: 0 0 15% 0;
+	}
+	.container {
+		max-width: 100% !important;
+		margin: 0 !important;
+	}
+	.first-section {
+		background: #fdfdfd;
+		padding: 70px 70px 180px 70px;
+		img {
+			max-width: 350px;
+			height: auto;
+		}
+	}
+	.second-section {
+		background: #fff;
+		padding: 100px 70px 70px 70px;
+		.welcome-text {
+			width: 183px;
+			height: 55px;
+			left: 836px;
+			top: 115px;
+			font-family: 'Avenir Next';
+			font-style: normal;
+			font-weight: 700;
+			font-size: 25px;
+			line-height: 55px;
+			letter-spacing: -0.04em;
+			color: $color_1;
+			text-transform: capitalize;
+		}
+		.sub-text {
+			width: 194px;
+			height: 28px;
+			left: 836px;
+			top: 280px;
+			font-family: 'Avenir Next';
+			font-style: normal;
+			font-weight: 400;
+			font-size: 15px;
+			line-height: 27px;
+			color: $color_2;
+			&:first-letter {
+				text-transform: capitalize;
+			}
+		}
+	}
+	.forgot-text {
+		width: 147px;
+		height: 17px;
+		left: 836px;
+		top: 516px;
+		font-family: 'Avenir Next';
+		font-style: normal;
+		font-weight: 600;
+		font-size: 10px;
+		line-height: 16px;
+		text-align: right;
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
+		color: $color_3;
+	}
+	.login-form {
+		button {
+			left: 58.06%;
+			right: 10.9%;
+			background: #39cdcc;
+			border-radius: 8px;
+			width: 90%;
+			height: 35px;
+			margin: 0 auto;
+			border: 1px solid #39cdcc;
+			color: $color_4;
+			text-transform: uppercase;
+			&:hover {
+				background: #30b3b2;
+				border: 1px solid #30b3b2;
+				transition: 0.3s;
+			}
+		}
+		input {
+			box-sizing: border-box;
+			margin-bottom: 5%;
+			padding: 0 0 0 20px;
+			width: 90%;
+			height: 35px;
+			background: #FFFFFF;
+			border: 2px solid rgba(84, 95, 125, 0.15);
+			border-radius: 5px;
+			&:focus {
+				border: 1px solid #39cdcc !important;
+			}
+		}
+	}
+}
+
+
+
+
+@media (min-width: 601px) and (max-width: 768px) {
+	.logo-top {
+		margin: 0 0 15% 0;
+	}
+	.container {
+		max-width: 100% !important;
+		margin: 0 !important;
+	}
+	.first-section {
+		background: #fdfdfd;
+		padding: 70px 70px 40px 70px;
+		img {
+			max-width: 100%;
+			height: auto;
+		}
+	}
+	.second-section {
+		background: #fff;
+		padding: 40px 70px 70px 70px;
+		.welcome-text {
+			width: 100%;
+			height: 55px;
+			left: 836px;
+			top: 115px;
+			font-family: 'Avenir Next';
+			font-style: normal;
+			font-weight: 700;
+			font-size: 35px;
+			line-height: 55px;
+			letter-spacing: -0.04em;
+			color: $color_1;
+			text-transform: capitalize;
+			text-align: center;
+		}
+		.sub-text {
+			width: 100%;
+			height: 28px;
+			left: 836px;
+			top: 280px;
+			font-family: 'Avenir Next';
+			font-style: normal;
+			font-weight: 400;
+			font-size: 15px;
+			line-height: 27px;
+			color: $color_2;
+			text-align: center;
+			&:first-letter {
+				text-transform: capitalize;
+			}
+		}
+	}
+	.forgot-text {
+		width: 147px;
+		height: 17px;
+		left: 836px;
+		top: 516px;
+		font-family: 'Avenir Next';
+		font-style: normal;
+		font-weight: 600;
+		font-size: 10px;
+		line-height: 16px;
+		text-align: right;
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
+		color: $color_3;
+	}
+	.login-form {
+		button {
+			left: 58.06%;
+			right: 10.9%;
+			background: #39cdcc;
+			border-radius: 8px;
+			width: 100%;
+			height: 50px;
+			margin: 0 auto;
+			border: 1px solid #39cdcc;
+			color: $color_4;
+			text-transform: uppercase;
+			&:hover {
+				background: #30b3b2;
+				border: 1px solid #30b3b2;
+				transition: 0.3s;
+			}
+		}
+		input {
+			box-sizing: border-box;
+			margin-bottom: 5%;
+			padding: 0 0 0 20px;
+			width: 100%;
+			height: 50px;
+			background: #FFFFFF;
+			border: 2px solid rgba(84, 95, 125, 0.15);
+			border-radius: 5px;
+			&:focus {
+				border: 1px solid #39cdcc !important;
+			}
+		}
+	}
+}
+
+
+
+
+
+@media (max-width: 600px) {
+	.logo-top {
+		margin: 0 0 15% 0;
+	}
+	.container {
+		max-width: 100% !important;
+		margin: 0 !important;
+	}
+	.first-section {
+		background: #fdfdfd;
+		padding: 70px 70px 30px 70px;
+		img {
+			max-width: 100%;
+			height: auto;
+		}
+	}
+	.second-section {
+		background: #fff;
+		padding: 30px 70px 70px 70px;
+		.welcome-text {
+			width: 100%;
+			height: 55px;
+			left: 836px;
+			top: 115px;
+			font-family: 'Avenir Next';
+			font-style: normal;
+			font-weight: 700;
+			font-size: 35px;
+			line-height: 55px;
+			letter-spacing: -0.04em;
+			color: $color_1;
+			text-transform: capitalize;
+			text-align: center;
+		}
+		.sub-text {
+			width: 100%;
+			height: 28px;
+			left: 836px;
+			top: 280px;
+			font-family: 'Avenir Next';
+			font-style: normal;
+			font-weight: 400;
+			font-size: 15px;
+			line-height: 27px;
+			color: $color_2;
+			text-align: center;
+			&:first-letter {
+				text-transform: capitalize;
+			}
+		}
+	}
+	.forgot-text {
+		width: 147px;
+		height: 17px;
+		left: 836px;
+		top: 516px;
+		font-family: 'Avenir Next';
+		font-style: normal;
+		font-weight: 600;
+		font-size: 10px;
+		line-height: 16px;
+		text-align: right;
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
+		color: $color_3;
+	}
+	.login-form {
+		button {
+			left: 58.06%;
+			right: 10.9%;
+			background: #39cdcc;
+			border-radius: 8px;
+			width: 100%;
+			height: 50px;
+			margin: 0 auto;
+			border: 1px solid #39cdcc;
+			color: $color_4;
+			text-transform: uppercase;
+			&:hover {
+				background: #30b3b2;
+				border: 1px solid #30b3b2;
+				transition: 0.3s;
+			}
+		}
+		input {
+			box-sizing: border-box;
+			margin-bottom: 5%;
+			padding: 0 0 0 20px;
+			width: 100%;
+			height: 50px;
+			background: #FFFFFF;
+			border: 2px solid rgba(84, 95, 125, 0.15);
+			border-radius: 5px;
+			&:focus {
+				border: 1px solid #39cdcc !important;
+			}
+		}
+	}
+}
+
+
+
+
+
+
+// show password
+input[type="button"]#showText{
+    -webkit-appearance: none!important;
+    text-align: right;
+    width: 85px;
+    border: none;
+    padding-right: 20px;
+    margin: 0 0 0 -87px;
+    background: transparent;
+
+    z-index: 222;
+    font-family: 'Avenir Next';
 	font-style: normal;
 	font-weight: 600;
 	font-size: 12px;
 	line-height: 16px;
-	text-align: right;
+	text-align: center;
 	letter-spacing: 0.1em;
 	text-transform: uppercase;
-	color: $color_3;
+	color: #39CDCC;
+	cursor: pointer;
+	&:focus {
+		border: none;
+	}
+
 }
-.login-form {
-	button {
-		left: 58.06%;
-		right: 10.9%;
-		background: #39cdcc;
-		border-radius: 8px;
-		width: 447px;
-		height: 50px;
-		margin: 0 auto;
-		border: 1px solid #39cdcc;
-		color: $color_4;
-		text-transform: uppercase;
-		&:hover {
-			background: #30b3b2;
-			border: 1px solid #30b3b2;
-			transition: 0.3s;
-		}
-	}
-	input {
-		box-sizing: border-box;
-		margin-bottom: 5%;
-		padding: 0 0 0 20px;
-		width: 447px;
-		height: 50px;
-		background: #FFFFFF;
-		border: 2px solid rgba(84, 95, 125, 0.15);
-		border-radius: 5px;
-		&:focus {
-			border: 1px solid #39cdcc !important;
-		}
-	}
+input[type="button"]#showText{
+    -webkit-appearance: none!important;
+    border-right: 0px;
+    outline: none;
 }
