login form validation

--- a/src/Styles/login.scss
+++ b/src/Styles/login.scss
@@ -564,3 +564,11 @@ input[type="button"]#showText{
     border-right: 0px;
     outline: none;
 }
+
+// error
+.error {
+	font-family: 'Avenir Next';
+	font-style: normal;
+	color: red;
+}
+
