--- a/src/Styles/detail.scss
+++ b/src/Styles/detail.scss
@@ -14,6 +14,10 @@ $font-family_1: 'Work Sans';
 
 @media (min-width: 1470px) {
 	
+	.sidebar-button{
+		display: none
+	}
+
 	.wrap-content {
 		padding-left: 50px;
 		margin-left: 50px;
@@ -295,6 +299,10 @@ $font-family_1: 'Work Sans';
 
 @media (min-width: 992px) and (max-width: 1469px) {
 	
+	.sidebar-button{
+		display: none
+	}
+
 	.wrap-content {
 		padding-left: 20px;
 		margin-left: 20px;
@@ -575,6 +583,10 @@ $font-family_1: 'Work Sans';
 
 @media (min-width: 768px) and (max-width: 991px) {
 	
+	.sidebar-button{
+		display: none
+	}
+
 	.wrap-content {
 		padding-left: 20px;
 		margin-left: 20px;
@@ -966,10 +978,10 @@ $font-family_1: 'Work Sans';
 		box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
 		border-radius: 4px;
 		.image {
-			width: 33%;
+			width: 35%;
 			margin-top: 3%;
 			.detail-name {
-				padding: 12px 30px 0 30px;
+				padding: 12px 10px 0 30px;
 				margin-left: 2%;
 				.detail-fullname {
 					font-family: $font-family_1;
@@ -979,12 +991,13 @@ $font-family_1: 'Work Sans';
 					line-height: 26px;
 					color: $color_1;
 					text-transform: capitalize;
+					width: 100%;
 				}
 				.detail-tag {
 					font-family: $font-family_1;
 					font-style: normal;
 					font-weight: 400;
-					font-size: 10px;
+					font-size: 12px;
 					line-height: 16px;
 					color: $color_2;
 				}
@@ -1153,6 +1166,22 @@ $font-family_1: 'Work Sans';
 
 @media (max-width: 600px) {
 	
+	.sidebar-button {
+		font-family: 'Work Sans';
+		font-style: normal;
+		font-weight: 600;
+		font-size: 12px;
+		line-height: 16px;
+		/* identical to box height */
+		padding: 10px;
+		text-align: center;
+		letter-spacing: 0.1em;
+		text-transform: uppercase;
+		border: 1px solid #000;
+		border-radius: 8px;
+		color: #000;
+	}
+	
 	.wrap-content {
 		padding-left: 20px;
 		margin-left: 20px;
@@ -1169,7 +1198,7 @@ $font-family_1: 'Work Sans';
 					font-family: 'Work Sans';
 					font-style: normal;
 					font-weight: 500;
-					font-size: 11px;
+					font-size: 15px;
 					line-height: 28px;
 					color: $color_1;
 				}
@@ -1196,11 +1225,11 @@ $font-family_1: 'Work Sans';
 	}
 
 	.detail-ul-padding {
-		width: 35%;
-		float: left;
+		width: 50%;
+		float: left
 	}
 	.detail-ul-paddings {
-		width: 65%
+		width: 50%;
 	}
 	.detail-ul {
 		list-style-type: none;
@@ -1211,7 +1240,7 @@ $font-family_1: 'Work Sans';
 			font-family: $font-family_1;
 			font-style: normal;
 			font-weight: 600;
-			font-size: 6px;
+			font-size: 8px;
 			line-height: 16px;
 			border: 1px solid #E4033B;
 			border-radius: 8px;
@@ -1219,7 +1248,7 @@ $font-family_1: 'Work Sans';
 			letter-spacing: 0.1em;
 			text-transform: uppercase;
 
-			width: 80px;
+			width: 100px;
 			height: 30px;
 			color: $color_3;
 		}
@@ -1237,19 +1266,17 @@ $font-family_1: 'Work Sans';
 		color: $color_4 !important;
 	}
 
-	.detail-intro {
-		.container {
-			margin: 0;
-			padding: 0;
-			.row {
-				margin: -1%;
-			}
-		}
+	.detail-intro .container {
+		margin: 0;
+		padding: 0;
 	}
-	.detail-intro .container 
+
+	.detail-intro .container .row {
+		margin: -1%;
+	}
 
 	.detail-intro {
-		padding: 10px 10px 0 0px;
+		padding: 10px 10px 0 10px;
 
 		border: 1px solid rgba(33, 63, 125, 0.06);
 		box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
@@ -1257,14 +1284,15 @@ $font-family_1: 'Work Sans';
 		.image {
 			width: 33%;
 			margin-top: 3%;
+			margin-bottom: 3%;
 			.detail-name {
-				padding: 12px 0px 0 0px;
+				padding: 12px 20px 0 30px;
 				margin-left: 2%;
 				.detail-fullname {
 					font-family: $font-family_1;
 					font-style: normal;
 					font-weight: 500;
-					font-size: 15px;
+					font-size: 19px;
 					line-height: 26px;
 					color: $color_1;
 					text-transform: capitalize;
@@ -1273,45 +1301,43 @@ $font-family_1: 'Work Sans';
 					font-family: $font-family_1;
 					font-style: normal;
 					font-weight: 400;
-					font-size: 10px;
+					font-size: 12px;
 					line-height: 16px;
 					color: $color_2;
 				}
 			}
-			float: left;
-			width: 35%;
+			width: 100%;
+			height: 100px;
 			img {
+				float: left;
 				border-radius: 50%;
-				width: 35%;
+				width: 120px;
 				margin-right: 5%;
 			}
 		}
 		.user-tier {
-			float: left;
-			width: 30%;
-			align-items: center;
-			padding: 30px 10px;
-			border-left: 1px solid #E5E5E5;
-			border-right: 1px solid #E5E5E5;
+			width: 100%;
+			padding: 10px 10px;
+			margin-top: 10%;
+			border-top: 1px solid #E5E5E5;
+			border-bottom: 1px solid #E5E5E5;
 			p {
-				text-align: center;
 				font-family: $font-family_1;
 				font-style: normal;
 				font-weight: 500;
-				font-size: 12px;
+				font-size: 14px;
 				line-height: 16px;
 				color: $color_2;
 			}
 		}
 		.account {
-			float: left;
-			width: 30%;
-			padding: 25px 10px 40px 10px;
+			width: 100%;
+			padding: 15px 10px 30px 10px;
 			.balance {
 				font-family: 'Work Sans';
 				font-style: normal;
 				font-weight: 500;
-				font-size: 20px;
+				font-size: 22px;
 				line-height: 26px;
 				color: #213F7D;
 			}
@@ -1319,7 +1345,7 @@ $font-family_1: 'Work Sans';
 			font-family: 'Work Sans';
 			font-style: normal;
 			font-weight: 400;
-			font-size: 10px;
+			font-size: 12px;
 			line-height: 14px;
 			color: #213F7D;
 			}
@@ -1327,7 +1353,7 @@ $font-family_1: 'Work Sans';
 	}
 	.image-container {
 		display: flex;
-		justify-content: center;
+		justify-content: left;
 		img {
 			margin: 0 5px;
 		}
@@ -1384,15 +1410,14 @@ $font-family_1: 'Work Sans';
 		padding-top: 20px ;
 	}
 
-	.general-nav .user-details-padding {
-		width: 50%;
-	}
-
-	.general-nav .user-email-padding {
-		width: 100%
-	}
 
 	.general-nav {
+		.user-details-padding {
+			width: 50%;
+		}
+		.user-email-padding {
+			width: 100%
+		}
 		.nav-item {
 			.nav-link {
 				// font-family: 'SF Compact Text';
@@ -1422,7 +1447,7 @@ $font-family_1: 'Work Sans';
 				font-family: $font-family_1;
 				font-style: normal;
 				font-weight: 400;
-				font-size: 10px;
+				font-size: 12px;
 				line-height: 14px;
 				text-transform: uppercase;
 				color: $color_2;
@@ -1431,10 +1456,11 @@ $font-family_1: 'Work Sans';
 				font-family: $font-family_1;
 				font-style: normal;
 				font-weight: 500;
-				font-size: 10px;
+				font-size: 12px;
 				line-height: 19px;
 				color: $color_2;
 			}
 		}
 	}
 }
+
